[metadata]
name = prefect-azure-devops
description = Prefect integrations for working with Azure DevOps repositories
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PrefectHQ/prefect-azure-devops
author = Prefect Community
author_email = community@prefect.io
license = Apache License 2.0
classifiers =
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries

[options]
packages = find:
python_requires = >=3.8
install_requires =
    prefect>=2.0.0,<3.0.0
    pydantic

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    pytest
    pytest-asyncio
    pytest-mock
    black
    ruff
    mypy
    pre-commit

[options.entry_points]
prefect.collections =
    prefect_azure_devops = prefect_azure_devops

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v
asyncio_mode = auto

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True
