[project]
name = "prefect-cli-bench"
version = "0.1.0"
description = "cli benchmark harness for prefect"
requires-python = ">=3.10"

dependencies = [
    "rich>=13.0.0",
    "plotext>=5.0.0",
]

[project.optional-dependencies]
stats = ["scipy>=1.0.0"]

[project.scripts]
prefect-cli-bench = "benchmark_cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark_cli"]
