[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "prefect-aws"
description = "Prefect integrations for interacting with Amazon Web Services."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache License 2.0"}
keywords = ["prefect"]
authors = [
  {name = "Prefect Technologies, Inc.", email = "help@prefect.io"}
]
classifiers = [
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
    "boto3>=1.24.53",
    "botocore>=1.27.53",
    "mypy_boto3_s3>=1.24.94",
    "mypy_boto3_secretsmanager>=1.26.49",
    "prefect>=2.16.4",
    "pyparsing>=3.1.1",
    "tenacity>=8.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "boto3-stubs >= 1.24.39",
    "coverage",
    "flake8",
    "interrogate",
    "isort",
    "mkdocs",
    "mkdocs-gen-files",
    "mkdocs-material",
    "mkdocstrings-python-legacy",
    "mock; python_version < '3.8'", # moto 4.2.5 broke something fairly deep in our test suite https://github.com/PrefectHQ/prefect-aws/issues/318
    "moto >= 3.1.16, < 4.2.5",
    "mypy",
    "pillow",
    "pre-commit",
    "pytest",
    "pytest-asyncio >= 0.18.2, != 0.22.0, < 0.23.0", # Cannot override event loop in 0.23.0. See https://github.com/pytest-dev/pytest-asyncio/issues/706 for more details.
    "pytest-cov",
    "pytest-xdist",
    "types-boto3 >= 1.0.2",
]

[project.urls]
Homepage = "https://github.com/PrefectHQ/prefect/tree/main/src/integrations/prefect-aws"

[project.entry-points."prefect.collections"]
prefect_aws = "prefect_aws"

[tool.setuptools_scm]
version_file = "prefect_aws/_version.py"
root = "../../.."
tag_regex = "^prefect-aws-(?P<version>\\d+\\.\\d+\\.\\d+)$"
fallback_version = "0.0.0"
git_describe_command = 'git describe --dirty --tags --long --match "prefect-aws-*[0-9]*"'

[tool.interrogate]
ignore-init-module = true
ignore_init_method = true
exclude = ["prefect_aws/_version.py", "tests"]
fail-under = 95
omit-covered-files = true

[tool.coverage.run]
omit = ["tests/*", "prefect_aws/_version.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"